--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,13 +41,16 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    aaptOptions {
+        noCompress 'tflite'
+    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.songma"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion /* flutter.minSdkVersion */ 24
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -68,4 +71,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:+'
 }
