--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   tflite_flutter: ^0.9.1
-
+  tflite_audio: ^0.3.0
+  lottie: ^2.3.2
+  audioplayers: ^4.0.1
+  assets_audio_player: ^3.0.6
+  flutter_svg: ^2.0.5
+  http: ^0.13.5
+  dio: ^5.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,10 +66,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/soundclassifier.tflite
+    - assets/labels.txt
+    - assets/sound-voice-waves.json
+    - assets/recording.json
+    - assets/1.mp3
+    - assets/2.mp3
+    - assets/3.mp3
+    - assets/4.mp3
+    - assets/5.mp3
+    - assets/bg.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
